# lcj

./: .gitignore  .release-please-manifest.json  AGENTS.md  README.md  release-please-config.json
.github/workflows/: clusage-menubar-release.yml
clud/: Makefile  README.md  install.sh  pyproject.toml
clud/docs/: REMOTE_CONTROL.md  SMOKE.md  USAGE_STATUS.md
clud/hooks/: hud-post-tool.sh  hud-pre-tool.sh  hud-session-end.sh  hud-session-start.sh  lib.sh
clud/plugin/: __init__.py  claude_hud.py  hud_config.py  hud_server.py  ssl_support.py  state_io.py  state_reader.py  status_fetcher.py  token_resolver.py  tty_resolver.py  usage_fetcher.py
clud/plugin/webview/: hud.css  hud.js  index.html
clud/tests/: conftest.py  test_hud_config.py  test_hud_server.py  test_ssl_support.py  test_state_io.py  test_state_reader.py  test_status_fetcher.py  test_token_resolver.py  test_tty_resolver.py  test_usage_fetcher.py
clud/tests/hooks/: test_post_tool.py  test_pre_tool.py  test_session_end.py  test_session_start.py
clusage-menubar/: CHANGELOG.md  Info.plist  Makefile  Package.swift  README.md  build.sh  create_dmg.sh  install.sh  make_icon.sh  release.sh
clusage-menubar/Sources/ClusageCore/: CookieAuth.swift  ResetTimeFormatter.swift  TokenResolver.swift  UsageSnapshot.swift
clusage-menubar/Sources/ClusageMenubar/: AppDelegate.swift  CookieStore.swift  StatusBarView.swift  UsageFetcher.swift  main.swift
clusage-menubar/Sources/ClusageTests/: main.swift
docs/superpowers/specs/: 2026-05-15-claude-hud-design.md
